plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.7'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'ovh.bookexchange'
version = '0.0.1-SNAPSHOT'
description = 'bookexchange\'s api'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'com.auth0:java-jwt:4.5.0'
    implementation 'org.postgresql:postgresql:42.7.3'
    implementation 'org.modelmapper:modelmapper:3.2.6'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.17'
    implementation('org.apache.commons:commons-lang3') {version {strictly '3.18.0'}}
    implementation 'org.testng:testng:7.7.1'

    compileOnly 'org.projectlombok:lombok:1.18.42'
    annotationProcessor 'org.projectlombok:lombok:1.18.42'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.graphql:spring-graphql-test'

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    implementation 'org.springframework.boot:spring-boot-starter-mail'

    // Pour charger les variables d'environnement depuis un fichier .env
    implementation 'me.paulschwarz:spring-dotenv:4.0.0'

    // Pour l'envoie de mails avec Resend
    implementation 'com.resend:resend-java:+'

    // STOMP pour la messagerie en temps réel
    implementation 'org.springframework.boot:spring-boot-starter-websocket'

    // Firebase
    implementation 'com.google.firebase:firebase-admin:9.2.0'
}

tasks.named('test') {
	useJUnitPlatform()
}